--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
   uses-material-design: true
   assets:
     - images/profilePic.PNG
+    - images/logos.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
