Food Delivery App [ver5] ------------------------ task completed ---------------
1> app logo & name changed
2> intermediate responsive

need to be done
---------------
1> complete responsive
2> shopping cart
3> chat with vender(food supplier)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
 
     <application
-        android:label="firebase_sub_collection"
+        android:label="E-Khaja"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:exported="true"
