Food Delivery App [ver7] ------------------------ task completed --------------- imporved on: ------------ 1> add to cart icon changes on tap 2> appBar section: mycart & order displaying to same user oder pages need to be done
---------------
1> backend of USER_CART page
2> notification to restaurant/cafe on confirming order

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   internet_connection_checker: ^0.0.1+4
 
 
+  firebase_database: ^9.0.15
+
+
 
 
 dev_dependencies:
@@ -73,8 +76,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - images/profilePic.PNG
-    - images/logo.png
+    - assets/images/profilePic.PNG
+    - assets/images/logo.png
+    - assets/icons/addCartWhite.png
+    - assets/icons/addCartBlack.png
+    - assets/icons/
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
