--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,6 @@ dependencies:
   internet_connection_checker: ^0.0.1+4
 
 
-  firebase_database: ^9.0.15
-
-
 
 
 dev_dependencies:
@@ -76,13 +73,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/profilePic.PNG
-    - assets/images/logo.png
-    - assets/icons/addCartWhite.png
-    - assets/icons/addCartBlack.png
-    - assets/icons/
-
-
+    - images/profilePic.PNG
+    - images/logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
